Spacing fixes - qhwt-607

--- a/src/components/mega_main_navigation/css/component.scss
+++ b/src/components/mega_main_navigation/css/component.scss
@@ -56,7 +56,7 @@
                 }
                 
                 @include QLD-media(lg) {
-                    @include QLD-space(margin, 0unit 0.75unit 0unit -0.3unit);
+                    @include QLD-space(margin, 0unit 0.75unit 0unit -0.25unit);
                 }
             }
 
@@ -84,7 +84,7 @@
             &-text{
                 display: none;
                 @include QLD-media(lg) {
-                    @include QLD-space(padding, .625unit .75unit .625unit .75unit);
+                    @include QLD-space(padding, .625unit .5unit .625unit .5unit);
                     display: inline-flex;
                     flex-direction: column;
                     align-items: center;
